# Human-Digital-Twinning

./: .gitignore  BACKEND_FRONTEND_MAPPING.md  CLINICAL_TRIAL_READY.md  DATASET_DOWNLOAD_GUIDE.md  DOCUMENT_PARSING_GUIDE.md  DOWNLOAD_SUMMARY.md  DRUG_DATA_SOURCES.md  Dockerfile  FRONTEND_IMPLEMENTATION_COMPLETE.md  MEDICATION_RECOMMENDATION_SYSTEM.md  README.md  design.md  docker-compose.yml  list_routes.py  pyproject.toml  requirements.txt  setup.py  start.sh
Report/: Project_Report.aux  Project_Report.tex  Project_Report.toc  README.md  Sample.tex  main.aux  main.bbl  main.blg  main.tex  references.bib
docs/: API_DOCUMENTATION.md  CHANGELOG.md  COMPLETE_DATA_SUMMARY.md  DATA_DOWNLOAD_STATUS.md  DIGITAL_TWIN_GUIDE.md  DOCUMENT_PARSING_SUMMARY.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  FRONTEND_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CLINICAL.md  KAGGLE_SETUP_STEPS.md  MEDICATION_SYSTEM_COMPLETE.md  MOCK_DATA_FIX.md  QUICK_START.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  webrun.md
frontend/: index.html  package.json
frontend_legacy/: README.md  package-lock.json  package.json
results/: training_summary.txt
scripts/: combine_all_datasets.py  demo_digital_twin.py  demo_document_upload.py  demo_recommendations.py  download_all_datasets.py  download_data.py  download_drug_datasets.py  download_kaggle_datasets.py  download_kaggle_heart_datasets.py  download_mimic_guide.py  download_mimic_iv_complete.py  extract_mimic_hf_data.py  kaggle_setup_helper.sh  seed_clinical_db.py  seed_hospital_core.py  seed_order_catalog.py  setup_kaggle.py  (+6 more)
(+118 files in other folders)
